# email-triage-openenv

./: Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py
