[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "An OpenEnv-compliant email triage reinforcement learning environment"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["openenv", "reinforcement-learning", "email-triage", "nlp"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/megavasan/email-triage-openenv"
Repository = "https://github.com/megavasan/email-triage-openenv"

[tool.setuptools.packages.find]
where = ["."]
